fix for spring data