@@ -23,6 +23,7 @@ import javax.validation.constraints.NotNull;
 import java.util.Collection;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import static com.epam.esm.exception.AccessException.State.INVALID_ORDER_USER;
 import static org.springframework.http.HttpStatus.*;
@@ -69,7 +70,7 @@ public class OrderControllerImpl implements OrderController {
         OrderResponseDto orderDto = orderService.findById(orderId);
         List<OrderItemDto> orderItemsDto = orderDto.getOrderGiftCertificates().stream()
                 .filter(orderItemDto -> orderItemDto.getId() == orderItemId)
-                .toList();
+                .collect(Collectors.toList());
         if (orderItemsDto.isEmpty()) {
             throw new EntityNotFoundException(orderItemId, OrderItemDto.class);
         }
